fix overflow for neighbors

--- a/client/game.css
+++ b/client/game.css
@@ -317,6 +317,7 @@ a:link {
     margin-right: 4px;
     height: 34px;
     flex-grow: 1;
+    overflow: hidden;
 }
 
 .neighbor_brief {
